@@ -1,3 +1,10 @@
+2005-10-26  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* amd/amq_subr.c (amqproc_pawd_1_svc): repeatedly resolve path in
+	Amd, not in pawd (to avoid repeated network RPCs).
+
+	* amq/pawd.c (transform_dir): move repeated path resolution into Amd.
+
 2005-10-25  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* amq/pawd.c (transform_dir): resolve path repeatedly until
